# fvm

./: .dockerignore  .gitignore  Cargo.toml  DESIGN.md  README.md
.omo/evidence/: task-07-fvm-aot-milestone-todos.md  task-08-fvm-aot-milestone-todos.md  task-09-fvm-aot-milestone-todos.md  task-10-fvm-aot-milestone-todos.md  task-11-fvm-aot-milestone-todos.md  task-12-fvm-aot-milestone-todos.md  task-13-fvm-aot-milestone-todos.md  task-14-fvm-aot-milestone-todos.md  task-15-fvm-aot-milestone-todos.md  task-16-fvm-aot-milestone-todos.md  task-17-fvm-aot-milestone-todos.md  task-18-fvm-aot-milestone-todos.md  task-19-fvm-aot-milestone-todos.md
.omo/notepads/fvm-aot-milestone-todos/: learnings.md
docker/: fvm-runner.Dockerfile
docs/: PUNCHLIST.md  README.md  fvm-aot-compatibility-matrix.md  fvm-aot-graal-replacement-plan.md  fvm-aot-test-strategy.md
examples/aot-http/src/: AotConfig.java  AotHandler.java  AotHttp.java  AotResponder.java
examples/aot-println/src/: AotHello.java
examples/perf-http/: README.md
examples/perf-http/src/: PerfApp.java
examples/plain-http/: README.md
scripts/: compare-baselines  fvm-docker  perf-aot  perf-native
src/: artifact.rs  benchmark.rs  cli.rs  command_util.rs  firecracker.rs  framework.rs  fvm_aot.rs  guest_init.rs  main.rs  rootfs.rs  toolchain.rs
src/fvm_aot/: classfile.rs  codegen.rs  compiler.rs  diagnostics.rs  emitter.rs  evaluator.rs  ir.rs  ir_verify.rs  link.rs  lower.rs  mod.rs  object_model.rs  reachability.rs  runtime_stub.rs  test_support.rs  types.rs
tests/: aot_firecracker.rs  cli_flow.rs
(+31 files in other folders)
