[package]
name = "fvm"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Firecracker-native deployment toolchain for Java applications"
default-run = "fvm"

[[bin]]
name = "fvm"
path = "src/main.rs"

[[bin]]
name = "fvm-init"
path = "src/bin/fvm-init.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
cranelift-codegen = "0.133.1"
cranelift-frontend = "0.133.1"
cranelift-module = "0.133.1"
cranelift-object = "0.133.1"
hex = "0.4"
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
target-lexicon = "0.13.5"
tempfile = "3"
zip = { version = "2", default-features = false, features = ["deflate"] }

[dev-dependencies]
tempfile = "3"
